--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
-fooder/src/firebase/FirebaseApi.tsx
+node_modules/
+.expo/
+dist/
+npm-debug.*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+*.orig.*
+web-build/
+
+# macOS
+.DS_Store
+
+# Ignore Firebase API keys
+src/firebase/FirebaseApi.tsx
