final config edits

--- a/app.json
+++ b/app.json
@@ -1,10 +1,11 @@
 {
   "expo": {
-    "name": "fooder",
-    "slug": "fooder",
+    "name": "lifehack",
+    "slug": "lifehack",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
+    
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
