--- a/package.json
+++ b/package.json
@@ -10,18 +10,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/stack": "^6.2.2",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "firebase": "^9.9.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-gesture-handler": "^2.5.0",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-safe-area-context": "4.2.4",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
+    "@types/react": "~17.0.43",
     "@types/react-native": "~0.66.13",
     "typescript": "~4.3.5"
   },
