--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "6.0.11",
+    "@react-navigation/stack": "^6.2.2",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "firebase": "^9.9.0",
@@ -17,8 +19,9 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-elements": "^3.4.2",
-    "react-native-reanimated": "^2.9.1",
-    "react-native-safe-area-context": "^4.3.1",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "4.2.4",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7"
   },
