--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^6.2.2",
     "expo": "~45.0.0",
     "expo-camera": "^12.2.0",
+    "expo-image-picker": "~13.1.1",
     "expo-media-library": "^14.1.0",
     "expo-sharing": "^10.2.0",
     "expo-status-bar": "~1.3.0",
