--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/native": "6.0.11",
     "@react-navigation/stack": "^6.2.2",
+    "@types/uuid": "^8.3.4",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "firebase": "^9.9.0",
